<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.form.FormFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:logo="@mipmap/ic_launcher"
        app:title="Main Form Fragment" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_default"
        android:text="@string/input_form_description"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_default"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputlayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_number_one">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="7" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputlayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_number_two">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="7" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputlayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_string_one">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="50" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputlayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_string_two">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="50" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputlayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_limit">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="7" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/validate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/spacing_default"
            android:text="@string/validate" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>